remove piping through head -20 in execute command

--- a/books/structural_imaging/freesurfer_recon_all_clinical.ipynb
+++ b/books/structural_imaging/freesurfer_recon_all_clinical.ipynb
@@ -3358,7 +3358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "bdb7d49b-94fd-47b0-bcb9-1774858213c3",
    "metadata": {},
    "outputs": [
@@ -3380,7 +3380,7 @@
    "source": [
     "# White surfaces (lh/rh) with solid colors\n",
     "\n",
-    "lh = surf/\"lh.white\"; rh = surf/\"rh.white\"\n",
+    "lh = surf_dir/\"lh.white\"; rh = surf_dir/\"rh.white\"\n",
     "assert lh.exists() and rh.exists(), \"Missing white surfaces\"\n",
     "\n",
     "nv = NiiVue(height=600, multiplanar_layout=\"render\", multiplanar_show_render=True,\n",
@@ -3451,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "3922ce82-c4bb-41dc-b0df-b609b343da4d",
    "metadata": {
     "editable": true,
@@ -3479,7 +3479,7 @@
    "source": [
     "# Inflated surfaces (lh/rh) with solid colors\n",
     "\n",
-    "lh = surf/\"lh.inflated\"; rh = surf/\"rh.inflated\"\n",
+    "lh = surf_dir/\"lh.inflated\"; rh = surf_dir/\"rh.inflated\"\n",
     "assert lh.exists() and rh.exists(), \"Missing inflated surfaces\"\n",
     "\n",
     "nv = NiiVue(height=600, multiplanar_layout=\"render\", multiplanar_show_render=True,\n",
