included new instructions for toc and watermark

--- a/template.ipynb
+++ b/template.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Notebook Template file "
+    "# Example Notebook Template"
    ]
   },
   {
@@ -28,7 +28,9 @@
     "**Author**: \n",
     "*Include the name of all authors of the workflow showcased in the example notebook*.\n",
     "\n",
-    "### Citation:\n",
+    "**Date**:\n",
+    "\n",
+    "### Citation and Resources:\n",
     "*Please include the citations for all tools, software, and publications referenced in the workflow. If you are basing your workflow on another previously published example notebook, please cite the name and DOI.*\n",
     "\n",
     "#### Tools included in this workflow\n",
@@ -51,32 +53,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output CPU information"
+    "**Optional:** Add a Table of Contents (ToC) below if it helps navigation during interactive use on Neurodesk. \n",
+    "When rendered on GitHub Pages, a sidebar ToC is already available, so an inline ToC may be unnecessary.\n",
+    "\n",
+    "Each link must match a corresponding section heading: ` ## 1. Data Preparation → #1-Data-Preparation` (keep spaces as hyphens, preserve capital letters), as demonstrated in the next cell.\n",
+    "\n",
+    "\n",
+    "[Remove this cell when creating your example]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vendor_id\t: GenuineIntel\n",
-      "model name\t: Intel(R) Xeon(R) Gold 6126 CPU @ 2.60GHz\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!cat /proc/cpuinfo | grep 'vendor' | uniq\n",
-    "!cat /proc/cpuinfo | grep 'model name' | uniq"
+    "## Table of content\n",
+    "[1. Data Preparation](#1.-Data-Preparation)  \n",
+    "[2. Analysis](#2.-Analysis)  \n",
+    "[3. Results](#3.-Results) \n",
+    "\n",
+    "[Remove this cell if no ToC is used in your notebook]"
    ]
   },
   {
@@ -167,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data preparation\n",
+    "## 1. Data Preparation\n",
     "*Please indicate clearly where the data is sourced. In this template, there's an example for Datalad and OSF*"
    ]
   },
@@ -398,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "## 2. Analysis"
    ]
   },
   {
@@ -425,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results"
+    "## 3. Results"
    ]
   },
   {
@@ -458,6 +453,44 @@
     "nv = NiiVue()\n",
     "nv.load_volumes([{\"path\": \"sub-08_T1w_brain.nii.gz\"}])\n",
     "nv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dependencies in Jupyter/Python\n",
+    "- Using the package [watermark](https://github.com/rasbt/watermark) to document system environment and software versions used in this notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install watermark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext watermark\n",
+    "\n",
+    "%watermark\n",
+    "%watermark --iversions"
    ]
   }
  ],
