Update url to from www.neurodesk.org to neurodesk.org

--- a/books/workflows/nipype_full.ipynb
+++ b/books/workflows/nipype_full.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "## 2. Nipype in Jupyter Notebooks on Neurodesk\n",
     "\n",
-    "<img src=\"https://www.neurodesk.org/static/logos/neurodesk.org_horizontal.png\" style=\"float: right; margin: 0 auto; padding: 5px;\" width=\"25%\" height=\"25%\">\n",
+    "<img src=\"https://neurodesk.org/static/logos/neurodesk.org_horizontal.png\" style=\"float: right; margin: 0 auto; padding: 5px;\" width=\"25%\" height=\"25%\">\n",
     "\n",
     "\n",
     "Neurodesk project enables the use of all neuroimaging applications inside computational notebooks\n"
@@ -3156,8 +3156,8 @@
     "    - [Pydra-ML](https://github.com/nipype/pydra-ml)\n",
     "\n",
     "- Renton, A.I., Dao, T.T., Johnstone, T. et al. Neurodesk: an accessible, flexible and portable data analysis environment for reproducible neuroimaging. Nat Methods (2024). https://doi.org/10.1038/s41592-023-02145-x\n",
-    "    - [Neurodesk Website](https://www.neurodesk.org/)\n",
-    "    - [Jupyter Notebook Examples on Neurodesk](https://www.neurodesk.org/example-notebooks/intro.html)\n"
+    "    - [Neurodesk Website](https://neurodesk.org/)\n",
+    "    - [Jupyter Notebook Examples on Neurodesk](https://neurodesk.org/example-notebooks/intro.html)\n"
    ]
   }
  ],
