--- a/books/workflows/papermill-slurm-submission-example.ipynb
+++ b/books/workflows/papermill-slurm-submission-example.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please have a bloc for loading the different modules needed for your example. If you can not find all the required tools in Neurodesk, feel free to add tools using the web-based GUI https://www.neurodesk.org/neurocontainers-ui/"
+    "Please have a bloc for loading the different modules needed for your example. If you can not find all the required tools in Neurodesk, feel free to add tools using the web-based GUI https://neurodesk.org/neurocontainers-ui/"
    ]
   },
   {
