--- a/books/workflows/nipype_short.ipynb
+++ b/books/workflows/nipype_short.ipynb
@@ -163,7 +163,7 @@
     "id": "f09a1ba3-c01d-48df-8894-6c566907d6be"
    },
    "source": [
-    "## Load afni and SPM as well"
+    "## Load AFNI and SPM as well"
    ]
   },
   {
